--- a/program/index.html
+++ b/program/index.html
@@ -1377,8 +1377,8 @@
               <div class="day-card-row">
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
-                    <p class="event-card-desc">To be announced.</p>
+                    <h3 class="event-card-heading">Large Language Models as Conversational Agents</h3>
+                    <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -1580,9 +1580,9 @@
                         <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/palamar.png" alt="TBA">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name"></p>
+                        <p class="event-card-name">Onur Candan</p>
                         <div class="event-card-title">
-                          <p class="event-card-position"></p>
+                          <p class="event-card-position">Founder</p>
                           <p class="event-card-company">Palamar Technologies</p>
                         </div>
                       </div>
