--- a/program/index.html
+++ b/program/index.html
@@ -1219,7 +1219,7 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="tba">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/Pınar Özveren.jpg" alt="tba">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name">Pınar özveren</p>
@@ -1231,7 +1231,7 @@
                     </div>
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="tba">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/Uğur Üresin.jpg" alt="tba">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name">Uğur Üresin</p>
@@ -1243,7 +1243,7 @@
                     </div>
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="tba">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/DavutAkcicek.jpg" alt="tba">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name">Davut Ayçiçek</p>
