--- a/program/index.html
+++ b/program/index.html
@@ -1502,7 +1502,7 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/RGB-LogoV4.png" alt="logo">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/vesikalik didem.JPG" alt="Didem Gündoğdu">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name">Didem Gündoğdu</p>
