--- a/program/index.html
+++ b/program/index.html
@@ -1517,8 +1517,8 @@
                 </div>
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
-                    <p class="event-card-desc">To be announced.</p>
+                    <h3 class="event-card-heading">AI ve Lowcode: İşlerin Geleceği</h3>
+                    <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
                         <span class="event-card-details-icon">
@@ -1543,7 +1543,7 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/palamar.png" alt="TBA">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/onurcandan.png" alt="Onur Candan">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name">Onur Candan</p>
