--- a/program/index.html
+++ b/program/index.html
@@ -1193,7 +1193,7 @@
               <div class="day-card-row">
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
+                    <h3 class="event-card-heading">Software On Wheels</h3>
                     <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
@@ -1243,7 +1243,7 @@
                     </div>
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/DavutAkcicek.jpg" alt="tba">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/DavutAkcicek.jpg" alt="Davut Akçiçek">
                       </div>
                       <div class="event-card-about">
                         <p class="event-card-name">Davut Ayçiçek</p>
