--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -110,8 +110,10 @@
     <section style="background-image:none;color:black;display:flex; flex-basis:100%;">
         <div class="sponsorspage">
 
-            <div class="announcement">
+            <div class="announcement" style="text-align: center;">
+                <h5>
                  Yakında duyurulacak!
+                </h5>
             </div>
 
             <div class="sponsorscolumns"  style="display:none">
