--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
         <div class="container"> <!--KOPYALAMANIN BAŞI, BURADAN SONRASI GİDECEK. Discord'a toplantıda attığım link ile yapılacak. Bundan farklı görünürse, sıkıntı olursa yazın.-->
             <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
-            <div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
+            <div class="pa-gallery-player-widget" style="width:100%; height:480px;"
                 data-link="https://photos.app.goo.gl/aMeLMepQMvi1Hxtd6" data-title="Datacamp"
                 data-description="20 new photos added to shared album">
                 <object
