--- a/index.html
+++ b/index.html
@@ -225,31 +225,19 @@
         
       </section>
    
-    <section id="gallery">
-        <div class="container-wide" >
-            <h2 >Geçtiğimiz Seneden Fotoğraflar</h2>
+    <<section id="gallery">
+        <div class="container-wide">
+            <h2>Geçtiğimiz Seneden Fotoğraflar</h2>
         </div>
-        <div class="container"> <!--KOPYALAMANIN BAŞI, BURADAN SONRASI GİDECEK. Discord'a toplantıda attığım link ile yapılacak. Bundan farklı görünürse, sıkıntı olursa yazın.-->
-            <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
+        <div class="container">
             <div class="pa-gallery-player-widget" style="width:100%; height:480px;"
                 data-link="https://photos.app.goo.gl/aMeLMepQMvi1Hxtd6" data-title="Datacamp"
                 data-description="20 new photos added to shared album">
-                <object
-                    data="https://photos.app.goo.gl/5Ej24u4JFysaUoHW6"></object>
-                <object
-                    data="https://photos.app.goo.gl/FuN8WJw7iAR4vNN47"></object>
-                <object
-                    data="https://photos.app.goo.gl/cD5xgjRhRtEW4dBR8"></object>
-                <object
-                    data="https://photos.app.goo.gl/j329nN9PRzgD449FA"></object>
-                <object
-                    data="https://photos.app.goo.gl/yMt9HTTKPqZuXvp48"></object>
-                <object
-                    data="https://photos.app.goo.gl/bmLsaZcXy95Kt1gQA"></object>
-                <object
-                    data="https://photos.app.goo.gl/RtpRerpp7uxB3gb47"></object>
             </div>
-
+            <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
+        </div>
+    </section>
+    
             <!--BURAYA KADAR, ARASININ YERİNE KOY-->
         </div>
     </section>
